--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
   "devDependencies": {
     "@azure/functions": "^3.0.0",
-    "azure-functions-core-tools": "^4.x",
+    "@tsconfig/node16": "^1.0.3",
     "@types/node": "16.x",
+    "azure-functions-core-tools": "^4.x",
     "typescript": "^4.0.0"
   }
 }
