--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/node": "16.x",
     "azure-functions-core-tools": "^4.x",
     "typescript": "^4.0.0"
+  },
+  "dependencies": {
+    "@azure/data-tables": "^13.2.1"
   }
 }
