--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@azure/functions": "^3.0.0",
     "@tsconfig/node16": "^1.0.3",
     "@types/node": "16.x",
+    "@types/node-fetch": "^2.6.2",
     "azure-functions-core-tools": "^4.x",
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "@azure/data-tables": "^13.2.1"
+    "@azure/data-tables": "^13.2.1",
+    "node-fetch": "^2.6.8"
   }
 }
